--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,32 @@
 {
-	"name": "abram/laravel-odbc",
+	"name": "phattarachai/laravel-odbc",
 	"description": "ODBC integration for Laravel framework ",
 	"type": "library",
-	"homepage": "https://github.com/andreossido/laravel-odbc",
+	"homepage": "https://github.com/phattarachai/laravel-odbc",
 	"authors": [
 		{
-			"name": "Andrea Abram",
-			"email": "andreossido@gmail.com",
-			"homepage": "https://github.com/andreossido",
+			"name": "Phattarachai Chaimongkol",
+			"email": "phatchai28@gmail.com",
+			"homepage": "https://phattarachai.dev",
 			"role": "Developer"
 		}
 	],
 	"require": {
-		"php": "^5.3.3 || >=7.0",
-		"illuminate/database": "~5.1 || >= 6.0",
-		"illuminate/support": "~5.1 || >= 6.0"
+		"php": "^8.0",
+		"illuminate/database": ">= 6.0",
+		"illuminate/support": ">= 6.0",
+		"ext-pdo": "*",
+		"ext-odbc": "*"
 	},
 	"autoload": {
-		"classmap": [
-			"src"
-		]
+		"psr-4": {
+			"Phattarachai\\Odbc\\": "src"
+		}
 	},
 	"extra": {
 		"laravel": {
 			"providers": [
-				"Abram\\Odbc\\ODBCServiceProvider"
+				"Phattaarachai\\Odbc\\ODBCServiceProvider"
 			]
 		}
 	}
